<?xml version="1.0"?>
<package format="2">
  <name>hangfa_nq2_description</name>
  <version>1.1.0</version>

  <license>MIT</license>
  <description>The hangfa_nq2_description package</description>

  <author email="ye.tian@iquotient-robotics.com">Ye Tian</author>
  <maintainer email="ye.tian@iquotient-robotics.com">Ye Tian</maintainer>

  <url type="website">http://wiki.ros.org/iqr_bringup</url>
  <url type="repository">https://github.com/I-Quotient-Robotics/iqr_bringup</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
