<?xml version="1.0"?>
<package format="2">
  <name>hangfa_nq2_description</name>
  <version>1.1.0</version>

  <license>MIT</license>
  <description>The hangfa_nq2_description package</description>

  <author email="ye.tian@iquotient-robotics.com">Ye Tian</author>
  <maintainer email="ye.tian@iquotient-robotics.com">Ye Tian</maintainer>

  <url type="website">http://wiki.ros.org/iqr_bringup</url>
  <url type="repository">https://github.com/I-Quotient-Robotics/iqr_bringup</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
  </export>
</package>
