<?xml version="1.0"?>
<package format="2">
  <name>hangfa_nq2_driver</name>
  <version>1.1.0</version>

  <license>MIT</license>
  <description>The hangfa_nq2_driver package</description>

  <author email="yanlei@iquotient-robotics.com">Lei Yan</author>
  <author email="ye.tian@iquotient-robotics.com">Ye Tian</author>
  <maintainer email="ye.tian@iquotient-robotics.com">Ye Tian</maintainer>

  <url type="website">http://wiki.ros.org/hangfa_nq2_driver</url>
  <url type="repository">https://github.com/I-Quotient-Robotics/hangfa_nq2_driver</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
  </export>
</package>
